--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Caravana - The road to Jaisalmer</title>
+    <title>Caravana - The Road to Jaisalmer</title>
     <meta name="description" content="Lovable Generated Project" />
     <link rel="icon" href="/favicon.png" type="image/x-icon" />
     <meta name="author" content="Sparsh Singh" />
-    <meta property="og:title" content="Caravana - The road to Jaisalmer" />
-    <meta property="og:description" content="Caravan - The road to Jaisalmer" />
+    <meta property="og:title" content="Caravana - The Road to Jaisalmer" />
+    <meta property="og:description" content="Caravan - The Road to Jaisalmer" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Sparsh Singh" />
