--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://www.youtube.com">
+    <link rel="preconnect" href="https://www.google.com">
     <title>Caravana - The Road to Jaisalmer</title>
     <meta name="description" content="Lovable Generated Project" />
     <link rel="icon" href="/favicon.png" type="image/x-icon" />
