Added ImageKit URL

--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://www.youtube.com">
-    <link rel="preconnect" href="https://www.google.com">
+    <link rel="preconnect" href="https://www.youtube.com" />
+    <link rel="preconnect" href="https://www.google.com" />
+    <link rel="preconnect" href="https://ik.imagekit.io" crossorigin />
+    <link
+      rel="preload"
+      href="https://ik.imagekit.io/c2g5xtzznq/clip1.mp4"
+      as="video"
+      type="video/mp4"
+      fetchpriority="high"
+    />
+    <link
+      rel="preload"
+      href="https://ik.imagekit.io/c2g5xtzznq/clip2.mp4"
+      as="video"
+      type="video/mp4"
+      fetchpriority="high"
+    />
     <title>Caravana - The Road to Jaisalmer</title>
     <meta name="description" content="Lovable Generated Project" />
     <link rel="icon" href="/favicon.png" type="image/x-icon" />
